--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,19 @@
-﻿################################################################################
-# This .gitignore file was automatically created by Microsoft(R) Visual Studio.
-################################################################################
+﻿# ...
+# Visual C++ cache files
+ipch/
+*.aps
+*.ncb
+*.opendb
+*.opensdf
+*.sdf
+*.cachefile
+*.VC.db
+*.VC.VC.opendb
 
-/.vs
+# Visual Studio profiler
+*.psess
+*.vsp
+*.vspx
+*.sap
+
+#...
