--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 2.8)
-project(test_project)
+project(GML_Project)
 
 #To add source code and setup folder structure
-set(src src/foo.cpp)
-set(test test/test.cpp)
-set(include include/foo.hpp)
+set(src GDML/GDML/GDML.cpp)
+set(test Test/test.cpp)
+set(include GDML/GDML/)
 include_directories(include)
 
 #Add Boost Unit Test Library
@@ -16,7 +16,7 @@ include_directories(${BOOST_INCLUDE_DIR})
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
     add_definitions(-std=c++17 -stdlib=libc++ -O3 -Wall)
 elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-    add_definitions(-std=c++11 -O3 -Wall)
+    add_definitions(-std=c++17 -O3 -Wall)
 endif()
 
 #Create Executable
