--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,10 @@ matrix:
     # The default clang compiler supports C++11.
     - os: osx
       env: COMPILER=clang++
+      packages:
+        - clang-8
+        - libc++-8-dev
+        - libc++abi-8-dev
 
 script:
   - mkdir build
