--- a/GDML/GDML/GDML.vcxproj
+++ b/GDML/GDML/GDML.vcxproj
@@ -156,10 +156,14 @@
     <ClInclude Include="error_codes.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="GDML.h" />
+    <ClInclude Include="GMLParser.h" />
+    <ClInclude Include="gml_symbol_profile.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GDML.cpp" />
+    <ClCompile Include="gdml_symbol_profile.cpp" />
+    <ClCompile Include="GMLParser.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
