--- a/GDML/GDML/GDML.vcxproj.filters
+++ b/GDML/GDML/GDML.vcxproj.filters
@@ -27,12 +27,24 @@
     <ClInclude Include="error_codes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GMLParser.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="gml_symbol_profile.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GDML.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GMLParser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="gdml_symbol_profile.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
