--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,8 @@ matrix:
         #- libc++abi-9-dev
 
 script:
-  - sudo apt-get install python3.6
+  - sudo add-apt-repository ppa:deadsnakes/ppa
+  - sudo apt-get install python3.8
   - sudo apt install python3-pip
   - pip3 install jinja2 Pygments
   - python3 --version
