--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ matrix:
         #- libc++abi-9-dev
 
 script:
+  - printenv
   - python3 --version
   - sudo apt install python3-pip
   - pip3 install jinja2 Pygments
