--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,8 @@ matrix:
 
 script:
   - sudo apt-get install python3.6
+  - sudo update-alternatives --install /usr/bin/python python /usr/bin/python3.5.2 1
+  - sudo update-alternatives --install /usr/bin/python python /usr/bin/python3.6 2
   - sudo update-alternatives  --set python /usr/bin/python3.6
   - python3 --version
   - sudo apt install python3-pip
