--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,9 @@ matrix:
 
 script:
   - sudo apt-get install python3.6
+  - sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.5 1
+  - sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.6 2
+  - sudo update-alternatives --config python3
   - pyenv global 3.6
   - python3 --version
   - sudo apt install python3-pip
