--- a/.travis.yml
+++ b/.travis.yml
@@ -38,3 +38,8 @@ script:
   - cmake ..
   - make
   - ctest
+after_success:
+  - git clone git://github.com/mosra/m.css
+  - cd m.css/documentation
+  - ./doxygen.py ../Doxyfile-mcss
+  - ls
