--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,7 @@ script:
   - make
   - ctest
 after_success:
+  - doxygen -V
   - git clone git://github.com/mosra/m.css
   - cd m.css/documentation
   - ./doxygen.py ../Doxyfile-mcss
