--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,13 @@ matrix:
         apt:
           packages:
             - libstdc++-9-dev
+            - python3.6
+            - python3-pip
+            - doxygen
           sources:
             - ubuntu-toolchain-r-test
             - deadsnakes
+            
       install:
         - sudo apt-get update -qq
         - sudo apt-get install -qq g++-9
@@ -27,10 +31,10 @@ matrix:
         #- libc++abi-9-dev
 
 script:
-  - sudo apt-get install python3.6
+  #- sudo apt-get install python3.6
   - sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.5 1
   - sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.6 2
-  - sudo apt install python3-pip
+ # - sudo apt install python3-pip
   - pip3 install jinja2 Pygments
   - pip3 --version
   - mkdir build
