--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ script:
   - make
   - ctest
 after_success:
-  - doxygen -V
+  - doxygen -v
   - git clone git://github.com/mosra/m.css
   - cd m.css/documentation
   - ./doxygen.py ../Doxyfile-mcss
