--- a/.travis.yml
+++ b/.travis.yml
@@ -36,15 +36,13 @@ script:
   - sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.6 2
  # - sudo apt install python3-pip
   - pip3 install jinja2 Pygments
-  - pip3 --version
   - mkdir build
   - cd build
   - cmake ..
   - make
   - ctest
 after_success:
-  - doxygen -v
   - git clone git://github.com/mosra/m.css
   - cd m.css/documentation
-  - ./doxygen.py ../Doxyfile-mcss
+  - ./doxygen.py /home/travis/build/gopi487krishna/Z/Doxyfile-mcss
   - ls
