--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,8 +4,8 @@ version: 2
 
 jobs:
   build:
-    docker:
-      - image: "debian:stretch"
+     machine:
+      image: circleci/classic:201808-01
     environment:
       CC: gcc-9
       CXX: g++-9
@@ -16,7 +16,7 @@ jobs:
       - run:
           command: 'apt-get update && sudo apt-get install -y cmake'
       - run:
-          command: 'sudo -E apt-get -yq --no-install-suggests --no-install-recommends install libstdc++-9-dev python3.7 python3-pip doxygen'
+          command: 'python3 -v
       - run:
           command: 'pip3 install jinja2 Pygments'  
       - run:
