--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,9 @@ jobs:
      steps:
       - checkout
       - run:
-          command: 'apt-get update && sudo apt-get install -y cmake'
+          command: 'sudo apt-get update'
+      - run:
+          command: 'sudo apt-get install -y cmake'
       - run:
           command: 'python3 -v'
       - run:
