--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,8 +4,8 @@ version: 2
 
 jobs:
   build:
-     machine:
-       image: circleci/classic:201808-01
+     machine: true
+     working_directory: ~/repo
      steps:
       - checkout
       - run:
