--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ version: 2
 jobs:
   build:
      machine: true
-     working_directory: ~/repo
+       image: ubuntu-1604:201903-01
      steps:
       - checkout
       - run:
