--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,13 +9,13 @@ jobs:
      steps:
       - checkout
       - run:
-          command: 'sudo apt-get update'
-      - run:
           command: 'sudo -E apt-add-repository -y "ppa:ubuntu-toolchain-r/test"'
       - run:
           command: 'sudo -E apt-add-repository -y "ppa:deadsnakes/ppa"'  
       - run:
-          command: 'sudo -E apt-get -yq --no-install-suggests --no-install-recommends install libstdc++-9-dev python3.7 python3-pip doxygen'       
+          command: 'sudo apt update'
+      - run:
+          command: 'sudo apt install python3.7'
       - run:
           command: 'sudo apt-get install -y cmake'
       - run:
