--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - run:
           command: 'sudo apt install python3.7'
       - run:
-          command: 'sudo apt install libstdc++-9dev'
+          command: 'sudo apt-get install libstdc++-9dev'
       - run:
           command: 'sudo apt install python3-pip'
       - run:
