--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,9 +15,9 @@ jobs:
       - run:
           command: 'sudo apt update'
       - run:
-          command: 'sudo apt install python3.7'
+          command: 'sudo apt install python3'
       - run:
-          command: 'python3 -v'
+          command: 'python3 --version'
       - run:
           command: 'sudo -E apt-get -yq --no-install-suggests --no-install-recommends install libstdc++-9-dev'
       - run:
