--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,9 +17,13 @@ jobs:
       - run:
           command: 'sudo apt install software-properties-common'
       - run:
+          command: 'sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.5 1'
+      - run:
+          command: 'sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.6 2'
+      - run:
           command: 'sudo apt install python3'
       - run:
-          command: 'python3.7 --version'
+          command: 'python3 --version'
       - run:
           command: 'sudo -E apt-get -yq --no-install-suggests --no-install-recommends install libstdc++-9-dev'
       - run:
