--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,8 @@ jobs:
   build:
      machine:
        image: ubuntu-1604:201903-01
+     environment:
+       PYTHONPATH: "/usr/bin/python3.7"
      steps:
       - checkout
       - run:
