--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,7 @@ version: 2
 jobs:
   build:
      machine:
-       image: ubuntu-1604:201903-01
-     environment:
-       PYTHONPATH: /usr/bin/python3.7
+       image: ubuntu-1604:201903-01 
      steps:
       - checkout
       - run:
@@ -18,12 +16,8 @@ jobs:
           command: 'sudo apt update'
       - run:
           command: 'sudo apt install software-properties-common'
-      - run:
-          command: 'sudo apt install python3.7'
-      - run:
-          command: 'sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.5 1'
-      - run:
-          command: 'sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.7 2'
+     - run:
+          command: 'sudo bash -c "yes | add-apt-repository ppa:jonathonf/python-3.6 && apt-get update && apt-get install -y python3.6"'
       - run:
           command: 'python3 --version'
       - run:
