Improved loop support

--- a/GDML/GDML/GDML.vcxproj
+++ b/GDML/GDML/GDML.vcxproj
@@ -153,6 +153,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <Lib />
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="error_codes.h" />
